--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "express-handlebars": "^7.1.0",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.1"
   }
 }
