--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.1"
   }
