--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
+    "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31",
     "morgan": "^1.10.0",
