--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.7.31",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.1"
   }
 }
